--- a/index.html
+++ b/index.html
@@ -5,26 +5,19 @@
     <!-- Flag icons by Twitter/X, "Twemoji" https://github.com/twitter/twemoji, CC-BY-4.0 -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Github Open Source Project Gallery</title>
+    <title>GitHub Open Source Project Gallery</title>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/styles.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <script type="importmap">
-      {
-        "imports": {
-          "vue": "https://unpkg.com/vue@3/dist/vue.esm-browser.js"
-        }
-      }
-    </script>
     <script src="index.js" type="module" defer></script>
   </head>
   <body>
     <template id="card">
       <div class="card container-fluid p-0 m-1">
         <div class="col-lg card-header justify-content-center align-items-center d-flex border-0">
-          <img :src="'/img/placeholder.png'" alt="" class="img card-icon" style="display: block;" />
+          <img :src="'./img/placeholder.png'" alt="" class="img card-icon" style="display: block;" />
         </div>
         <div class="col-lg card-block flex-grow flex-centered-column justify-content-center p-3">
           <a class="card-title" :href="`https://github.com/${repo.owner}/${repo.repo}`">{{ `${repo.owner}/${repo.repo}` }}</a>
