--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <script src="index.js" type="module" defer></script>
+    <script src="./index.js" type="module" defer></script>
   </head>
   <body>
     <template id="card">
@@ -36,7 +36,7 @@
           <h1 class="text-center py-2">Open-source GitHub project gallery</h1>
           <p>This page is a curated list of active open-source projects on GitHub that are open to contributions. You may filter the list by language, framework, or topic to find interesting projects.</p>
           <p>Repositories shown here were found via web crawling trending pages on GitHub, filtered to active projects and later manually reviewed to be included here.</p>
-          <p>During this data collection process, we've also gathered various general statistics about the most popular languages, frameworks and topics; if you're curious about current trends, check them out <a href="/statistics.html">here.</a></p>
+          <p>During this data collection process, we've also gathered various general statistics about the most popular languages, frameworks and topics; if you're curious about current trends, check them out <a href="./statistics.html">here.</a></p>
         </div>
 
         <div class="container border rounded my-3">
