--- a/public/statistics.html
+++ b/public/statistics.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="statistics.js" type="module" defer></script>
+    <script src="./statistics.js" type="module" defer></script>
   </head>
   <body>
     <template id="statcontainer">
@@ -34,7 +34,7 @@
         <div class="container border rounded mt-5 mb-3 p-3">
           <h1 class="text-center py-2">GitHub Statistics</h1>
           <p>This page compiles various statistics gathered from web-crawling thousands of GitHub repositories.</p>
-          <p>For more information on the project and a searchable index of interesting open-source projects, <a href="/index.html">check out the main page.</a></p>
+          <p>For more information on the project and a searchable index of interesting open-source projects, <a href="./index.html">check out the main page.</a></p>
         </div>
 
         <div class="container border rounded my-3">
