--- a/index.html
+++ b/index.html
@@ -101,6 +101,18 @@
                 </div>
               </div>
             </div>
+            <div class="m-1">
+              <div class="dropdown">
+                <button class="btn btn-outline-secondary dropdown-toggle settings-widget" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <i class="bi bi-gear"></i>
+                </button>
+                <ul class="dropdown-menu">
+                  <li v-for="sortingOption in sortingModes">
+                    <a class="dropdown-item" :class="{'active': sortingOption == sortingMode}" href="#" @click="sortingMode = sortingOption">Sort by {{ sortingOption }}</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
           </div>
           <div class="container mb-4">
             <div class="row">
