--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <script src="index.js" type="module" defer></script>
+    <script src="index.js" type="module"></script>
   </head>
   <body>
     <template id="card">
@@ -102,7 +102,6 @@
               </div>
             </div>
             <div class="m-1">
-              <div class="dropdown">
                 <button class="btn btn-outline-secondary dropdown-toggle settings-widget" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                   <i class="bi bi-gear"></i>
                 </button>
@@ -119,6 +118,9 @@
               <div v-for="repo in getRepositories()" class="col-xl-4 col-lg-6 my-1">
                 <card :repo="repo"></card>
               </div>
+            </div>
+            <div v-if="!showAll" class="row">
+              <button class="btn btn-primary btn-show-all mx-auto my-3" @click="showAll = true">Show All ({{ totalResults }})</button>
             </div>
           </div>
         </div>
