--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <script src="node_modules/colorthief/dist/color-thief.umd.js"></script>
     <script src="index.js" type="module"></script>
   </head>
   <body>
     <template id="card">
       <div class="card container-fluid p-0 m-1">
-        <div class="col-lg card-header justify-content-start align-items-center d-flex border-0 px-4">
-          <img :src="getRepositoryIcon()" alt="" class="img card-icon me-3" style="display: block;" />
+        <div class="col-lg card-header justify-content-start align-items-center d-flex border-0 px-4" :style="headerStyle">
+          <img ref="img" :src="getRepositoryIcon()" alt="" class="img card-icon me-3" style="display: block;" crossorigin="anonymous" />
           <a class="card-title" :href="`https://github.com/${repo.owner}/${repo.repo}`">{{ `${repo.owner}`}}/<wbr>{{`${repo.repo}`}}</a>
           <div class="mx-auto"></div>
           <div class="display-flex flex-column card-repo-statistics ms-2">
@@ -31,7 +32,7 @@
         </div>
         <footer class="card-footer d-flex flex-wrap">
           <!-- TODO bg color, link with urlparams -->
-          <a v-for="tag in $parent.getTags(repo)" @click="tag.type == 'language' ? $parent.selectSkill(tag.id) : $parent.selectTopic(tag.id)" class="tag rounded px-2 py-1 m-1" :class="$parent.getTagClass(tag)" href="#top">{{ tag.id }}</a>
+          <a v-for="tag in $parent.getTags(repo)" @click="tag.type == 'language' ? $parent.selectSkill(tag.id) : $parent.selectTopic(tag.id)" class="tag rounded px-2 py-1 m-1" :style="$parent.getTagStyle(tag)" href="#top">{{ tag.id }}</a>
         </footer>
       </div>
     </template>
