Improve search bar placeholder text
Now suggests what is actually searchable.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   </span>
                 </div>
                 <!-- TODO indicate which properties can be searched, ex. name/desc -->
-                <input v-model="searchQuery" type="text" class="form-control filtering-widget" placeholder="Search" aria-label="Search">
+                <input v-model="searchQuery" type="text" class="form-control filtering-widget" placeholder="Search name & description" aria-label="Search">
               </div>
             </div>
             <div class="m-1">
