--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
           <a class="card-title" :href="`https://github.com/${repo.owner}/${repo.repo}`">{{ `${repo.owner}`}}/<wbr>{{`${repo.repo}`}}</a>
           <div class="mx-auto"></div>
           <div class="display-flex flex-column card-repo-statistics ms-2">
-            <p data-bs-toggle="tooltip" data-bs-placement="top" title="Contributors"><i class="bi bi-person"></i> {{ getSuffixedValue(repo.contributors) }}</p>
+            <p ref="contributorsTooltip" data-bs-toggle="tooltip" data-bs-placement="top" title="Contributors"><i class="bi bi-person"></i> {{ getSuffixedValue(repo.contributors) }}</p>
             <!-- Display this tooltip at bottom so it doesn't obstruct the contributors count -->
-            <p data-bs-toggle="tooltip" data-bs-placement="bottom" title="Stars"><i class="bi bi-star"></i> {{ getSuffixedValue(repo.stars) }}</p>
+            <p ref="starsTooltip" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Stars"><i class="bi bi-star"></i> {{ getSuffixedValue(repo.stars) }}</p>
           </div>
         </div>
         <div class="col-lg card-block flex-grow flex-centered-column p-3">
