--- a/public/statistics.html
+++ b/public/statistics.html
@@ -38,10 +38,12 @@
     </template>
     <div id="app">
       <div class="container p-0 d-flex flex-column">
-        <div class="container border rounded mt-5 mb-3 p-3">
+        <div class="container mt-5 mb-3 p-3">
           <h1 class="text-center py-2">GitHub Statistics</h1>
-          <p>This page compiles various statistics gathered from web-crawling thousands of GitHub repositories.</p>
-          <p>For more information on the project and a searchable index of interesting open-source projects, <a href="./index.html">check out the main page.</a></p>
+          <div class="info-container mx-auto">
+            <p>This page compiles various statistics gathered from web-crawling thousands of GitHub repositories.</p>
+            <p>For more information on the project and a searchable index of interesting open-source projects, <a href="./index.html">check out the main page.</a></p>
+          </div>
         </div>
 
         <div class="container border rounded my-3">
